--- a/zalicz_strona_vyh.html
+++ b/zalicz_strona_vyh.html
@@ -11,6 +11,10 @@ function WinOpen_z4()
  {
 window.open("zadanie4_vyh.html","okienko_z4","toolbar=no,directories=no,menubar=no,height=770,width=705,top=2,left=1");
  }
+  function WinOpen_z5() 
+ {
+window.open("zadanie5_vyh.html","okienko_z5","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200");
+ }
 function okno_zamknij() 
  {
  window.close()
@@ -21,6 +25,7 @@ function okno_zamknij()
  <form>
  <input type="button_z3" name="zadanie3" value="zadanie3-vyhoniailo" onclick="WinOpen_z3(' ')">
  <input type="button_z4" name="zadanie4" value="zadanie4-vyhoniailo" onclick="WinOpen_z4(' ')">
+ <input type="button_z5" name="zadanie5" value="zadanie5-vyhoniailo" onclick="WinOpen_z5(' ')">
  <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
  </form>
 </body>
