--- a/zad13.html
+++ b/zad13.html
@@ -1,21 +1,21 @@
-<!DOCTYPE html> 
-<html lang="pl-PL"> 
-<HTML>
- <HEAD>
- <meta charset="utf-8"> 
- <TITLE>
- </TITLE>
-</HEAD>
-<BODY>
- <div style="color:red;font-size:50px;">
-  <script language="JavaScript">
-var liczba1=prompt("daj mianownik m=","")
-    var m_vyh=parseFloat(liczba1);
-document.write("m="+m_vyh+"<br>");
-m1=m_vyh+1;
-m2=(m_vyh+1)*m_vyh;
+<!DOCTYPE html>
+<html lang="pl-PL">
+<head>
+    <meta charset="utf-8">
+    <title>Твій заголовок</title>
+</head>
+<body>
+    <div style="color:red; font-size:50px;">
+        <script language="JavaScript">
+            var liczba1 = prompt("Дайте мінікс m=", "");
+            var m_vyh = parseFloat(liczba1);
+            document.write("m=" + m_vyh + "<br>");
+            
+            m1 = m_vyh + 1;
+            m2 = (m_vyh + 1) * m_vyh;
 
-document.write("1/"+m_vyh"=1/"+"<br>");
-</script>
-</BODY>
-</HTML>
+            document.write("1/" + m_vyh + "=1/" + m1 + "<br>");
+        </script>
+    </div>
+</body>
+</html>
