--- a/zalicz_strona_vyh.html
+++ b/zalicz_strona_vyh.html
@@ -15,6 +15,30 @@ window.open("zadanie4_vyh.html","okienko_z4","toolbar=no,directories=no,menubar=
  {
 window.open("zadanie5_vyh.html","okienko_z5","toolbar=no,directories=no,menubar=no,height=1000,width=1600,top=200,left=200");
  }
+ function WinOpen_z6() 
+ {
+window.open("zadanie6_vyh.html","okienko_z6","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200");
+ }
+function WinOpen_z7() 
+ {
+window.open("zadanie7_vyh.html","okienko_z7","toolbar=no,directories=no,menubar=no,height=770,width=705,top=2,left=1");
+ }
+  function WinOpen_z8() 
+ {
+window.open("zadanie8_vyh.html","okienko_z8","toolbar=no,directories=no,menubar=no,height=1000,width=1600,top=200,left=200");
+ }
+ function WinOpen_z9() 
+ {
+window.open("zadanie9_vyh.html","okienko_z9","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200");
+ }
+function WinOpen_z10() 
+ {
+window.open("zadanie10_vyh.html","okienko_z10","toolbar=no,directories=no,menubar=no,height=770,width=705,top=2,left=1");
+ }
+  function WinOpen_z11() 
+ {
+window.open("zadanie11_vyh.html","okienko_z11","toolbar=no,directories=no,menubar=no,height=1000,width=1600,top=200,left=200");
+ }
 function okno_zamknij() 
  {
  window.close()
@@ -26,6 +50,12 @@ function okno_zamknij()
  <input type="button_z3" name="zadanie3" value="zadanie3-vyhoniailo" onclick="WinOpen_z3(' ')">
  <input type="button_z4" name="zadanie4" value="zadanie4-vyhoniailo" onclick="WinOpen_z4(' ')">
  <input type="button_z5" name="zadanie5" value="zadanie5-vyhoniailo" onclick="WinOpen_z5(' ')">
+ <input type="button_z6" name="zadanie6" value="zadanie6-vyhoniailo" onclick="WinOpen_z6(' ')">
+ <input type="button_z7" name="zadanie7" value="zadanie7-vyhoniailo" onclick="WinOpen_z7(' ')">
+ <input type="button_z8" name="zadanie8" value="zadanie8-vyhoniailo" onclick="WinOpen_z8(' ')">
+ <input type="button_z3" name="zadanie9" value="zadanie9-vyhoniailo" onclick="WinOpen_z9(' ')">
+ <input type="button_z4" name="zadanie10" value="zadanie10-vyhoniailo" onclick="WinOpen_z10(' ')">
+ <input type="button_z5" name="zadanie11" value="zadanie11-vyhoniailo" onclick="WinOpen_z11(' ')">
  <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
  </form>
 </body>
