--- a/zalicz_strona_vyh.html
+++ b/zalicz_strona_vyh.html
@@ -39,6 +39,26 @@ window.open("zadanie10_vyh.html","okienko_z10","toolbar=no,directories=no,menuba
  {
 window.open("zadanie11_vyh.html","okienko_z11","toolbar=no,directories=no,menubar=no,height=1000,width=1600,top=200,left=200");
  }
+ function WinOpen_z12() 
+ {
+window.open("zadanie12_vyh.html","okienko_z12","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200");
+ }
+function WinOpen_z13() 
+ {
+window.open("zadanie13_vyh.html","okienko_z13","toolbar=no,directories=no,menubar=no,height=770,width=705,top=2,left=1");
+ }
+  function WinOpen_z14() 
+ {
+window.open("zadanie14_vyh.html","okienko_z14","toolbar=no,directories=no,menubar=no,height=1000,width=1600,top=200,left=200");
+ }
+ function WinOpen_z15() 
+ {
+window.open("zadanie15_vyh.html","okienko_z15","toolbar=no,directories=no,menubar=no,height=770,width=705,top=2,left=1");
+ }
+  function WinOpen_z16() 
+ {
+window.open("zadanie16_vyh.html","okienko_z16","toolbar=no,directories=no,menubar=no,height=1000,width=1600,top=200,left=200");
+ }
 function okno_zamknij() 
  {
  window.close()
@@ -53,9 +73,14 @@ function okno_zamknij()
  <input type="button_z6" name="zadanie6" value="zadanie6-vyhoniailo" onclick="WinOpen_z6(' ')">
  <input type="button_z7" name="zadanie7" value="zadanie7-vyhoniailo" onclick="WinOpen_z7(' ')">
  <input type="button_z8" name="zadanie8" value="zadanie8-vyhoniailo" onclick="WinOpen_z8(' ')">
- <input type="button_z3" name="zadanie9" value="zadanie9-vyhoniailo" onclick="WinOpen_z9(' ')">
- <input type="button_z4" name="zadanie10" value="zadanie10-vyhoniailo" onclick="WinOpen_z10(' ')">
- <input type="button_z5" name="zadanie11" value="zadanie11-vyhoniailo" onclick="WinOpen_z11(' ')">
+ <input type="button_z9" name="zadanie9" value="zadanie9-vyhoniailo" onclick="WinOpen_z9(' ')">
+ <input type="button_z10" name="zadanie10" value="zadanie10-vyhoniailo" onclick="WinOpen_z10(' ')">
+ <input type="button_z11" name="zadanie11" value="zadanie11-vyhoniailo" onclick="WinOpen_z11(' ')">
+ <input type="button_z12" name="zadanie12" value="zadanie12-vyhoniailo" onclick="WinOpen_z7(' ')">
+ <input type="button_z13" name="zadanie13" value="zadanie13-vyhoniailo" onclick="WinOpen_z8(' ')">
+ <input type="button_z14" name="zadanie14" value="zadanie14-vyhoniailo" onclick="WinOpen_z9(' ')">
+ <input type="button_z15" name="zadanie15" value="zadanie15-vyhoniailo" onclick="WinOpen_z10(' ')">
+ <input type="button_z16" name="zadanie16" value="zadanie16-vyhoniailo" onclick="WinOpen_z11(' ')">
  <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
  </form>
 </body>
