--- a/zalicz_strona_vyh.html
+++ b/zalicz_strona_vyh.html
@@ -35,21 +35,37 @@ function WinOpen_z10()
  {
 window.open("zadanie10_vyh.html","okienko_z10","toolbar=no,directories=no,menubar=no,height=770,width=705,top=2,left=1");
  }
-  function WinOpen_z11() 
+ function WinOpen_z11() 
  {
 window.open("zadanie11_vyh.html","okienko_z11","toolbar=no,directories=no,menubar=no,height=1000,width=1600,top=200,left=200");
+ }
+ function WinOpen_z11_kod() 
+ {
+window.open("zad11_vyh_kod.html","okienko_z11","toolbar=no,directories=no,menubar=no,height=1000,width=1600,top=200,left=200");
  }
  function WinOpen_z12() 
  {
 window.open("zadanie12_vyh.html","okienko_z12","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200");
  }
+ function WinOpen_z12_kod() 
+ {
+window.open("zad12_vyh_kod.html","okienko_z11","toolbar=no,directories=no,menubar=no,height=1000,width=1600,top=200,left=200");
+ }
 function WinOpen_z13() 
  {
 window.open("zadanie13_vyh.html","okienko_z13","toolbar=no,directories=no,menubar=no,height=770,width=705,top=2,left=1");
  }
+  function WinOpen_z13_kod() 
+ {
+window.open("zad13_vyh_kod.html","okienko_z11","toolbar=no,directories=no,menubar=no,height=1000,width=1600,top=200,left=200");
+ }
   function WinOpen_z14() 
  {
 window.open("zadanie14_vyh.html","okienko_z14","toolbar=no,directories=no,menubar=no,height=1000,width=1600,top=200,left=200");
+ }
+  function WinOpen_z15_kod() 
+ {
+window.open("zad15_vyh_kod.html","okienko_z11","toolbar=no,directories=no,menubar=no,height=1000,width=1600,top=200,left=200");
  }
  function WinOpen_z15() 
  {
@@ -58,6 +74,10 @@ window.open("zadanie15_vyh.html","okienko_z15","toolbar=no,directories=no,menuba
   function WinOpen_z16() 
  {
 window.open("zadanie16_vyh.html","okienko_z16","toolbar=no,directories=no,menubar=no,height=1000,width=1600,top=200,left=200");
+ }
+  function WinOpen_z16_kod() 
+ {
+window.open("zad16_vyh_kod.html","okienko_z11","toolbar=no,directories=no,menubar=no,height=1000,width=1600,top=200,left=200");
  }
 function okno_zamknij() 
  {
@@ -76,11 +96,17 @@ function okno_zamknij()
  <input type="button_z9" name="zadanie9" value="zadanie9-vyhoniailo" onclick="WinOpen_z9(' ')">
  <input type="button_z10" name="zadanie10" value="zadanie10-vyhoniailo" onclick="WinOpen_z10(' ')">
  <input type="button_z11" name="zadanie11" value="zadanie11-vyhoniailo" onclick="WinOpen_z11(' ')">
+ <input type="button_z11_k" name="zadanie11_kod" value="zadanie11-vyhoniailo_kod" onclick="WinOpen_z11_kod(' ')">
  <input type="button_z12" name="zadanie12" value="zadanie12-vyhoniailo" onclick="WinOpen_z12(' ')">
+ <input type="button_z12_k" name="zadanie12_kod" value="zadanie12-vyhoniailo_kod" onclick="WinOpen_z12_kod(' ')">
  <input type="button_z13" name="zadanie13" value="zadanie13-vyhoniailo" onclick="WinOpen_z13(' ')">
+ <input type="button_z13_k" name="zadanie13_kod" value="zadanie13-vyhoniailo_kod" onclick="WinOpen_z13_kod(' ')">
  <input type="button_z14" name="zadanie14" value="zadanie14-vyhoniailo" onclick="WinOpen_z14(' ')">
+ <input type="button_z14_k" name="zadanie14_kod" value="zadanie14-vyhoniailo_kod" onclick="WinOpen_z14_kod(' ')">
  <input type="button_z15" name="zadanie15" value="zadanie15-vyhoniailo" onclick="WinOpen_z15(' ')">
+ <input type="button_z15_k" name="zadanie15_kod" value="zadanie15-vyhoniailo_kod" onclick="WinOpen_z15_kod(' ')">
  <input type="button_z16" name="zadanie16" value="zadanie16-vyhoniailo" onclick="WinOpen_z16(' ')">
+ <input type="button_z16_k" name="zadanie16_kod" value="zadanie16-vyhoniailo_kod" onclick="WinOpen_z16_kod(' ')">
  <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
  </form>
 </body>
