--- a/zad14_vyh_kod.html
+++ b/zad14_vyh_kod.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>Zadanie 14 - Mishchenko</title>
+    <title>Zadanie 14 - Vyhoniailo </title>
     </head>
     <body>
     <textarea rows="25" cols="80">
@@ -10,7 +10,7 @@
 <html lang="pl-PL">
 <head>
         <meta charset="UTF-8">
-        <title>Zadanie 14 - Mishchenko</title>
+        <title>Zadanie 14 - Vyhoniailo</title>
         </head>
         <body>
             <div style="color: green; font-size: 60px;">
