--- a/zalicz_strona_vyh.html
+++ b/zalicz_strona_vyh.html
@@ -1,7 +1,7 @@
 <html>
  <head>
  <title> Vyhoniailo 3K2</title>
-   <h2>szkiel zaliczeniowy JavaSkript Valerii Vyhoniailo 3K2<h2>
+   <p style="text-align: center; color: red;">szkiel zaliczeniowy JavaSkript Valerii Vyhoniailo 3K2</p>
  <script language="JavaScript">
  function WinOpen_z3() 
  {
